Improve API documentation
