# lib/httpServer/index.js
@@ -278,7 +278,7 @@ class HTTPServer {
             }
         });
 
-        this.app.post('/token', apiLimiter, async (req, res) => {
+        this.app.post('/tokens', apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
 
             try {
